--- a/index.html
+++ b/index.html
@@ -3,149 +3,116 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pulse AI Labs - Innovating the Future of AI</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <title>Pulse AI Labs - Intelligent Automation Solutions</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700&family=Rajdhani:wght@300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg" />
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <nav class="nav-container">
         <div class="logo">
-          <svg
-            width="40"
-            height="40"
-            viewBox="0 0 200 200"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M30 100 Q 50 50, 80 80 T 120 40 T 170 100"
-              stroke="#a855f7"
-              stroke-width="12"
-              fill="none"
-            />
-          </svg>
-          <h1>Pulse AI Labs</h1>
+          <img
+            src="assets/images/pulse-ai-labs-logo-white-bg.png"
+            alt="Pulse AI Labs Logo"
+          />
         </div>
-        <ul class="nav-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        <div class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
+        <div class="nav-links">
+          <a href="#solutions">Solutions</a>
+          <a href="#about">About</a>
+          <a href="#contact">Contact</a>
+          <a href="#blog">Blog</a>
         </div>
+        <button class="cta-button">Get Started</button>
       </nav>
     </header>
 
     <main>
-      <section id="home" class="hero">
+      <section class="hero">
         <div class="hero-content">
-          <h1>Welcome to Pulse AI Labs</h1>
-          <p>Pioneering the Future of Artificial Intelligence</p>
-          <a href="#contact" class="cta-button">Get Started</a>
+          <h1>Intelligent automation, built just for you.</h1>
+          <p>
+            Transform your business with AI-driven solutions that adapt to your
+            unique needs.
+          </p>
+          <button class="cta-button">Explore Our Solutions</button>
         </div>
-        <div class="hero-glow"></div>
+        <div class="hero-background"></div>
       </section>
 
-      <section id="services" class="services">
-        <h2>Our Services</h2>
-        <div class="services-grid">
-          <div class="service-card">
-            <i class="fas fa-brain"></i>
-            <h3>AI Development</h3>
-            <p>Custom AI solutions tailored to your business needs</p>
+      <section id="solutions" class="solutions">
+        <h2>What We Do</h2>
+        <div class="solutions-grid">
+          <div class="solution-card">
+            <h3>AI System Design</h3>
+            <p>End-to-end AI architecture tailored to your business needs.</p>
           </div>
-          <div class="service-card">
-            <i class="fas fa-robot"></i>
-            <h3>Machine Learning</h3>
-            <p>Advanced ML models for predictive analytics</p>
+          <div class="solution-card">
+            <h3>Automation Solutions</h3>
+            <p>Streamline operations with intelligent automation.</p>
           </div>
-          <div class="service-card">
-            <i class="fas fa-chart-line"></i>
-            <h3>Data Analytics</h3>
-            <p>Transform your data into actionable insights</p>
+          <div class="solution-card">
+            <h3>Enterprise Integration</h3>
+            <p>Seamless integration with existing systems and workflows.</p>
           </div>
         </div>
       </section>
 
       <section id="about" class="about">
-        <h2>About Us</h2>
-        <div class="about-content">
-          <div class="about-text">
-            <p>
-              Pulse AI Labs is at the forefront of artificial intelligence
-              innovation. We combine cutting-edge technology with practical
-              solutions to help businesses thrive in the digital age.
-            </p>
-            <p>
-              Our team of experts is dedicated to pushing the boundaries of
-              what's possible with AI, making it accessible and beneficial for
-              organizations of all sizes.
-            </p>
+        <h2>Our Process</h2>
+        <div class="process-timeline">
+          <div class="process-step">
+            <h3>Discover</h3>
+            <p>Understanding your unique challenges and opportunities.</p>
+          </div>
+          <div class="process-step">
+            <h3>Architect</h3>
+            <p>Designing tailored AI solutions for your business.</p>
+          </div>
+          <div class="process-step">
+            <h3>Deploy</h3>
+            <p>Implementing and optimizing your AI systems.</p>
           </div>
         </div>
       </section>
 
       <section id="contact" class="contact">
-        <h2>Contact Us</h2>
-        <div class="contact-container">
-          <form id="contact-form">
-            <input type="text" placeholder="Name" required />
-            <input type="email" placeholder="Email" required />
-            <textarea placeholder="Message" required></textarea>
-            <button type="submit" class="cta-button">Send Message</button>
-          </form>
-        </div>
+        <h2>Let's Design Your AI Future</h2>
+        <form class="contact-form">
+          <input type="text" placeholder="Name" required />
+          <input type="email" placeholder="Email" required />
+          <textarea
+            placeholder="Tell us about your project"
+            required
+          ></textarea>
+          <button type="submit" class="cta-button">Send Message</button>
+        </form>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <div class="footer-content">
-        <div class="footer-section">
-          <div class="logo">
-            <svg
-              width="30"
-              height="30"
-              viewBox="0 0 200 200"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M30 100 Q 50 50, 80 80 T 120 40 T 170 100"
-                stroke="#a855f7"
-                stroke-width="12"
-                fill="none"
-              />
-            </svg>
-            <h3>Pulse AI Labs</h3>
-          </div>
-          <p>Innovating the future of AI</p>
+        <div class="footer-logo">
+          <img
+            src="assets/images/pulse-ai-labs-logo-black-bg.png"
+            alt="Pulse AI Labs Logo"
+          />
         </div>
-        <div class="footer-section">
-          <h3>Contact</h3>
-          <p>Email: info@pulse-ai-labs.com</p>
+        <div class="footer-links">
+          <a href="#solutions">Solutions</a>
+          <a href="#about">About</a>
+          <a href="#contact">Contact</a>
+          <a href="#blog">Blog</a>
         </div>
-        <div class="footer-section">
-          <h3>Follow Us</h3>
-          <div class="social-links">
-            <a href="https://www.instagram.com/pulse_ai_labs/"
-              ><i class="fab fa-instagram"></i
-            ></a>
-            <a href="https://www.facebook.com/profile.php?id=61575206897161"
-              ><i class="fab fa-facebook"></i
-            ></a>
-          </div>
+        <div class="footer-social">
+          <a href="#" aria-label="LinkedIn">LinkedIn</a>
+          <a href="#" aria-label="Twitter">Twitter</a>
+          <a href="#" aria-label="GitHub">GitHub</a>
         </div>
       </div>
       <div class="footer-bottom">
@@ -153,6 +120,6 @@
       </div>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
