Add burger menu for mobile navigation and update styles for improved responsiveness. Implement JavaScript functionality to toggle menu visibility and close on link click.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
             alt="Pulse AI Labs Logo"
           />
         </div>
+        <button class="burger-menu" aria-label="Toggle menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <div class="nav-links">
           <a href="#solutions">Solutions</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
           <a href="#blog">Blog</a>
+          <button class="cta-button">Get Started</button>
         </div>
-        <button class="cta-button">Get Started</button>
       </nav>
     </header>
 
